# game_of_life_with_changes

./: CMakeLists.txt  README.md  vcpkg.json
include/: ivec2.h
main/: Game.cpp
